packages/jsts/tests/dbd/benchmark/TypeError/T09 Setting getter-only property x/T09-02/reproducer.js
const paginationContainer = document.querySelector(".pagination"); // Noncompliant: TypeError: Cannot set property value of #<HTMLInputElement> which has only a getter
paginationContainer.innerHTML = "";
